remove mgmt overlay from initializr