@@ -19,7 +19,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 
 import java.util.Comparator;
-import java.util.stream.Collectors;
 
 public class OverlayProjectMetadataController extends ProjectMetadataController {
     private final DependencyMetadataProvider dependencyMetadataProvider;
@@ -69,7 +68,7 @@ public class OverlayProjectMetadataController extends ProjectMetadataController 
             .filter(ver -> ver.getType().equals(CasOverlayBuildSystem.TYPE))
             .map(SupportedVersion::getVersion)
             .sorted(Comparator.reverseOrder())
-            .collect(Collectors.toList());
+            .toList();
 
         var versionToChoose = (casVersion != null)
             ? VersionUtils.parse(casVersion)
